samples/task/valid/R32.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><stepresult><p>Result</p></stepresult><steptroubleshooting><p>Troubleshooting info.</p></steptroubleshooting></step></steps>
  </taskbody>
</task>