samples/task/invalid/R18.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><stepsection><p>Not a step</p></stepsection></steps>
  </taskbody>
</task>